syntax = "proto2";

option go_package = "dislinkt/common/profile";

package profile;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


service ProfileService{
  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/profile/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/profile"
    };
  }
  rpc Create(CreateRequest) returns(CreateResponse) {
    option (google.api.http) = {
      post: "/profile"
      body: "profile"
    };
  }
  rpc Update(UpdateRequest) returns(UpdateResponse) {
    option (google.api.http) = {
      put: "/profile/{id}"
      body: "profile"
    };
  }
  rpc Delete(DeleteRequest) returns(DeleteResponse) {
    option (google.api.http) = {
      delete: "/profile/{id}"
    };
  }
  rpc GenerateToken(GenerateTokenRequest) returns(GenerateTokenResponse) {
    option (google.api.http) = {
      get: "/profile/{id}/token"
    };
  }

  rpc GetByToken(GetByTokenRequest) returns(GetByTokenResponse) {
    option (google.api.http) = {
      get: "/profile/token/{token}"
    };
  }

  rpc GetLogs(GetLogsRequest) returns(GetLogsResponse) {
    option (google.api.http) = {
      get: "/profile/logs"
    };
  }
}

message GetRequest {
  required string id = 1;
}

message GetResponse {
  required Profile profile = 1;
}

message GetAllRequest {
  required string search = 1;
}

message GetAllResponse {
  repeated Profile profiles = 1;
}

message CreateRequest {
  required Profile profile = 1;
}

message CreateResponse {
  required Profile profile = 1;
}

message UpdateRequest {
  required string id = 1;
  required Profile profile = 2;
}

message UpdateResponse {
  required Profile profile = 1;
}

message DeleteRequest {
  required string id = 1;
}

message DeleteResponse {
}

message GenerateTokenRequest {
  required string id = 1;
}

message GenerateTokenResponse {
  required string token = 1;
}

message GetByTokenRequest {
  required string token = 1;
}

message GetByTokenResponse {
  required Profile profile = 1;
}

message Profile {
  required string id = 1 [default = ""];
  optional string username = 2 [default = ""];
  optional string firstName = 3 [default = ""];
  optional string lastName = 4 [default = ""];
  optional google.protobuf.Timestamp dateOfBirth = 5;
  optional string phoneNumber = 6 [default = ""];
  optional string email = 7 [default = ""];
  optional string gender = 8 [default = ""];
  optional bool isPrivate = 9 [default = false];
  optional string biography = 10 [default = ""];
  repeated Education education = 11;
  repeated WorkExperience workExperience = 12;
  repeated string skills = 13;
  repeated string interests = 14;
  optional string agentToken = 15 [default = ""];
}

message Education{
  optional string school = 1 [default = ""];
  optional string degree = 2 [default = ""];
  optional string fieldOfStudy = 3 [default = ""];
  required google.protobuf.Timestamp startDate = 4;
  required google.protobuf.Timestamp  endDate = 5;
  optional string grade = 6 [default = ""];
  optional string  description = 7 [default = ""];
}

message WorkExperience{
  optional string title = 1 [default = ""];
  optional string company = 2 [default = ""];
  enum EmploymentType {
    FULL_TIME = 0;
    PART_TIME = 1;
    SELF_EMPLOYED = 2;
    FREELANCE = 3;
    CONTRACT = 4;
    INTERNSHIP = 5;
    APPRENTICESHIP = 6;
    SEASONAL = 7;
  };
  required EmploymentType employmentType = 3 [default = FULL_TIME];
  optional string location = 4 [default = ""];
  required google.protobuf.Timestamp startDate = 5;
  required google.protobuf.Timestamp endDate = 6;
}

message Search {
  required string search = 1;
}

message Log {
  required google.protobuf.Timestamp time = 1;
  required string level = 2;
  required string msg = 3;
  required string service = 4;
  required string fullContent = 5;
}

message GetLogsRequest {
}

message GetLogsResponse {
  repeated Log logs = 1;
}
